results/phase2_summary.txt
python :   File "<string>", line 30
At line:1 char:1
+ python -c "
+ ~~~~~~~~~~~
    + CategoryInfo          : NotSpecifie 
   d: (  File "<string>", line 30:String  
  ) [], RemoteException
    + FullyQualifiedErrorId : NativeComma 
   ndError
 
    print(f'{name:25s}  overall={s[" 
sla_compliance\]:.1%}
          ^
SyntaxError: unterminated string literal 
(detected at line 30)
